Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -66,8 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "palermo = None\n",
-    "neighborh"
+    "palermo = neighborhoods[0"
    ]
   },
   {
