--- a/index.ipynb
+++ b/index.ipynb
@@ -388,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = marker_si"
+    "la_boca_marker = neighborhood_markers[5]"
    ]
   },
   {
